tests/NormalTests/paczka2/big_fuzzy/53132513.err
Error in line 6: w8eITrHDWuP A178 0,65
Error in line 15: VPc A178 37,5
Error in line 23: tXxDpj9Ez S67 6,8
Error in line 45: VPc A760 17,9
Error in line 49: VPc A434 8,2
Error in line 70: 8Khr A434 116,5
Error in line 73: 8Khr S67 46,5
Error in line 82: OK3 A434 58,1
Error in line 92: S67 S67 78,4
Error in line 98: S67 A760 43,1
Error in line 104: S67 A760 29,9
Error in line 96: tXxDpj9Ez A434 22,9
Error in line 105: S67 A434 35,8
Error in line 115: S67 A178 61,5
Error in line 118: S67 S67 14,2
Error in line 120: S67 A760 54,2
Error in line 122: VPc A178 16,1
Error in line 124: VPc A434 81,7
Error in line 131: VPc A760 63,8
Error in line 134: djuqT0rOyi S67 148,99
Error in line 133: 8Khr S67 15,1
Error in line 127: w8eITrHDWuP A760 93,6
Error in line 144: djuqT0rOyi A178 49,5
Error in line 150: w8eITrHDWuP S67 25,8
Error in line 160: djuqT0rOyi A434 75,7
Error in line 167: OK3 S67 82,3
Error in line 170: S67 A178 82,3
Error in line 176: OK3 A760 45,4
Error in line 182: VPc S67 71,6
Error in line 181: tXxDpj9Ez A434 294,8
Error in line 190: S67 S67 23,3
Error in line 186: OK3 S67 38,7
Error in line 191: tXxDpj9Ez A760 21,0
Error in line 199: VPc S67 88,2
Error in line 201: VPc A434 32,1
Error in line 223: djuqT0rOyi A178 198,48
Error in line 221: VPc A178 34,8
Error in line 219: tXxDpj9Ez A434 35,1
Error in line 225: VPc A434 8,1
Error in line 243: tXxDpj9Ez A760 92,4
Error in line 246: djuqT0rOyi A178 373,8
